# DE-project-a

./: .env.example  .gitignore  Makefile  pyproject.toml  setup.cfg  subscriptions
consultant/extractors/: base.py
consultant/extractors/scripts/: get_currency.py
consultant/jupyter_scripts_showcases/: clients.ipynb  currency.ipynb
consultant/scripts/extract/: cbr_currency_extract_load.py  get_cbr_currency.py
consultant/scripts/faker/: gen_accounts.py  gen_bank_clients.py
consultant/scripts/transform/: bank_clients_transform.py  bank_transacions_transform.py  cbr_currency_transform.py  currency.py
consultant/tools/: basic.py  patterns.py
consultant/transforms/: clients.ipynb  currency.ipynb  transactions.ipynb
e-consultant/data-cleaning/: clients.py
e-consultant/extractors/local_extractors/: base.py
e-consultant/extractors/online_extractors/: base.py  connectors.py
e-consultant/patterns/: names.py
e-consultant/transforms/: base.py  clients.ipynb  transform.ipynb
fixtures/: SPB-securities.csv  clients.csv  currency-guidebook.csv  oksm.xlsx  securities.csv
